# rust_pure_api

./: Cargo.toml  README  README.md
migrations/2019-10-11-214632_create_sessions/: up.sql
migrations/2019-30-09-174926_create_users/: up.sql
src/: db_connection.rs  main.rs  schema.rs
src/handlers/: sessions.rs  users.rs
src/models/: session.rs  user.rs
templates/: user.hbs  user.html
