[package]
name = "rust_pure_api"
version = "0.1.0"
authors = ["heri <heri@studiozenkai.com>"]
edition = "2019"

[dependencies]
actix = "0.8"
actix-web = "1.0.0-beta"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.1"