[package]
name = "rust_pure_api"
version = "0.1.0"
authors = ["heri <heri@studiozenkai.com>"]

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
diesel = { version = "2.2.3", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.1"
chrono = { version = "0.4.6", features = ["serde"] }
askama = "0.8"